# fg-bytegen

./: CHANGELOG.md  README.md  fg-bytegen.cabal  package.yaml  stack.yaml
.github/workflows/: fg-bytegen.yml
app/: Main.hs
fg-bytegen/: LICENSE  README.md
fg-bytegen/.github/workflows/: fg-bytegen.yml
fg-bytegen/app/: Main.hs
fg-bytegen/lib/: FgAST.hs  Sanitizer.hs  TextProcessor.hs
fg-bytegen/tests/: Main.hs
lib/: FgAST.hs  Sanitizer.hs  TextProcessor.hs
src/: FgAST.hs  Sanitizer.hs  TextProcessor.hs
test/: Spec.hs
tests/: Main.hs
