cabal-version:      2.4
name:               fg-bytegen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             afmika
maintainer:         afmichael73@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library text-processor
    exposed-modules: TextProcessor
    hs-source-dirs: lib
    build-depends:
        base ^>=4.17.2.0
        , parsec >= 3.1.16.1

    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: base ^>=4.17.2.0, HUnit ^>=1.6, text-processor
    hs-source-dirs: tests
    default-language: Haskell2010

executable fg-bytegen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010